--- a/Baseline.html
+++ b/Baseline.html
@@ -32,8 +32,8 @@ playerScore=0;
 absoluteX = 480;
 absoluteY = 270;
 //how long to play?
-//modeDuration=5*60*1000;
-modeDuration=20*1000;
+modeDuration=5*60*1000;
+//modeDuration=20*1000;
 gameTime=null;
 gameMode=0;
 gameRate=1;
